--- a/src/index.css
+++ b/src/index.css
@@ -4,47 +4,6 @@
   @tailwind components;
   @tailwind utilities;
 
-@font-face {
-  font-family: "Gotham";
-  src: url("/src/assets/fonts/Gotham-Thin.otf") format("opentype");
-  font-weight: 100;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Gotham";
-  src: url("/src/assets/fonts/Gotham-ExtraLight.otf") format("opentype");
-  font-weight: 200;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Gotham";
-  src: url("/src/assets/fonts/Gotham-Light.otf") format("opentype");
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Gotham";
-  src: url("/src/assets/fonts/Gotham-Book.otf") format("opentype");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Gotham";
-  src: url("/src/assets/fonts/Gotham-Medium.otf") format("opentype");
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "MyriadPro";
-  src: url("/src/assets/fonts/MyriadPro-Regular.otf") format("opentype");
-  font-weight: 400;
-  font-style: normal;
-}
 
 
 /* Gotham Book */
@@ -79,4 +38,19 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "GothamLight";
+  src: url('/src/assets/fonts/Gotham-Light_0.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "GothamBook";
+  src: url('/src/assets/fonts/GOTHAM-BOOK_1.OTF') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
 
